--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,5 +16,5 @@
     <color name="blue_light">#63a4ff</color>
     <color name="blue_dark">#004ba0</color>
 
-    <color name="red_700">#1976d2</color>
+    <color name="red_700">#d32f2f</color>
 </resources>
