--- a/app/src/main/res/layout/item_transaction.xml
+++ b/app/src/main/res/layout/item_transaction.xml
@@ -19,7 +19,7 @@
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:text="10.000" />
+            tools:text="10.000.000" />
 
         <TextView
             android:id="@+id/textDescription"
@@ -34,14 +34,14 @@
 
         <TextView
             android:id="@+id/textDate"
+            style="@style/TextAppearance.MaterialComponents.Body2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:text="2022-10-2"
-            android:textColor="@color/black" />
+            tools:text="2022-10-2" />
 
         <View
             android:id="@+id/divider"
