--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,4 +17,6 @@
     <color name="blue_dark">#004ba0</color>
 
     <color name="red_700">#d32f2f</color>
+    <color name="ic_launcher_background">#4caf40</color>
+
 </resources>
